--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en-US">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Ivanzz` - Protofolio</title>
-	<meta name="description" content="Bolby - Portfolio/CV/Resume HTML Template">
+	<title>My Protofolio</title>
+	<meta name="description" content="My Sites Protofolio">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
+	<link rel="shortcut icon" type="image/x-icon" href="https://telegra.ph/file/856f522dba02a6eac69fd.jpg">
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="all">
 	<link rel="stylesheet" href="css/all.min.css" type="text/css" media="all">
 	<link rel="stylesheet" href="css/simple-line-icons.css" type="text/css" media="all">
@@ -51,7 +51,7 @@
 		<div class="container">
 			<div class="intro">
 				<img src="https://telegra.ph/file/adeda102233c7a1b7fcbf.jpg" alt="rudi" class="mb-4" style="width: 200px; height: 200px; border-radius: 10px;" />
-				<h1 class="mb-2 mt-0">Ivan Maulana</h1>
+				<h1 class="mb-2 mt-0">ivanz</h1>
 				<span>I'm a <span class="text-rotating">Programmer, Web Developer, Student's</span></span>
 				<ul class="social-icons light list-inline mb-0 mt-4">
 					<li class="list-inline-item"><a href="mailto:ivanzzoffc@gmail.com"><i class="fa fa-envelope"></i></a></li>
