--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<section id="home" class="home d-flex align-items-center">
 		<div class="container">
 			<div class="intro">
-				<img src="https://telegra.ph/file/adeda102233c7a1b7fcbf.jpg" alt="rudi" class="mb-4" style="width: 200px; height: 200px; border-radius: 10px;" />
+				<img src="https://telegra.ph/file/adeda102233c7a1b7fcbf.jpg" alt="ivanz" class="mb-4" style="width: 200px; height: 200px; border-radius: 10px;" />
 				<h1 class="mb-2 mt-0">ivanz</h1>
 				<span>I'm a <span class="text-rotating">Programmer, Web Developer, Student's</span></span>
 				<ul class="social-icons light list-inline mb-0 mt-4">
