--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<li class="list-inline-item"><a href="https://github.com/VanzGantengz"><i class="fab fa-github"></i></a></li>
 				</ul>
 				<div class="mt-4">
-					<a href="https://wa.me/628812904283" class="btn btn-default">Contact Me</a>
+					<a href="https://wa.me/message/3AM4PPKIBQEYJ1" class="btn btn-default">Contact Me</a>
 				</div>
 			</div>
 			<div class="parallax" data-relative-input="true">
