--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>My Protofolio</title>
+	<title>ivanz</title>
 	<meta name="description" content="My Sites Protofolio">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="shortcut icon" type="image/x-icon" href="https://telegra.ph/file/856f522dba02a6eac69fd.jpg">
@@ -74,7 +74,7 @@
 					<li class="list-inline-item"><a href="https://github.com/VanzGantengz"><i class="fab fa-github"></i></a></li>
 				</ul>
 				<div class="mt-4">
-					<a href="https://www.mediafire.com/file/icu5wzhxr3jllxe/WA_AERO_V9.52F__--com_aero--__Modern__aeromods.app__.apk/file&lang=en" class="btn btn-default">Download</a>
+					<a href="https://wa.me/message/7EMC7OYV5YEEP1" class="btn btn-default">Chat-GPT</a>
 				</div>
 			</div>
 			<div class="parallax" data-relative-input="true">
